# grpc_auth_test_server

./: CMakeLists.txt  README.md  authservice.cpp  authservice.h  login.grpc.pb.cc  login.grpc.pb.h  login.pb.cc  login.pb.h  login.proto  main.cpp
